rtic/ui/signal-not-sync.stderr
error[E0277]: `RefCell<u32>` cannot be shared between threads safely
  --> ui/signal-not-sync.rs:13:12
   |
13 |         r: SignalReader<'static, CopyNotSend>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `RefCell<u32>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `RefCell<u32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
   = note: required for `&'static RefCell<u32>` to implement `Send`
note: required because it appears within the type `Option<&'static RefCell<u32>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
   = note: required for `Signal<Option<&'static RefCell<u32>>>` to implement `Sync`
   = note: 1 redundant requirement hidden
   = note: required for `&'static Signal<Option<&'static RefCell<u32>>>` to implement `Send`
note: required because it appears within the type `SignalReader<'static, Option<&'static RefCell<u32>>>`
  --> $WORKSPACE/rtic-sync/src/signal.rs
   |
   | pub struct SignalReader<'a, T: Copy> {
   |            ^^^^^^^^^^^^
note: required by a bound in `rtic::export::assert_send`
  --> src/export.rs
   |
   | pub fn assert_send<T: Send>() {}
   |                       ^^^^ required by this bound in `assert_send`
